2019-10-29  Dirk Schulze  <krit@webkit.org>

        [SVG2] fill-opacity, stroke-opacity, stop-opacity and flood-opacity doe not support percentage
        https://bugs.webkit.org/show_bug.cgi?id=201731

        Test number and percentage values for opacity, fill-opacity, stroke-opacity, stop-opacity, flood-opacity.

        Reviewed by Simon Fraser.

        * fast/css/parsing-opacity-expected.txt: Added.
        * fast/css/parsing-opacity.html: Added.
        * fast/svg/parsing-fill-opacity-expected.txt: Added.
        * fast/svg/parsing-fill-opacity.html: Added.
        * fast/svg/parsing-flood-opacity-expected.txt: Added.
        * fast/svg/parsing-flood-opacity.html: Added.
        * fast/svg/parsing-stop-opacity-expected.txt: Added.
        * fast/svg/parsing-stop-opacity.html: Added.
        * fast/svg/parsing-stroke-opacity-expected.txt: Added.
        * fast/svg/parsing-stroke-opacity.html: Added.

2019-10-28  Kate Cheney  <katherine_cheney@apple.com>

        http/tests/resourceLoadStatistics/capped-lifetime-for-cookie-set-in-js-w* are flaky timeouts
        https://bugs.webkit.org/show_bug.cgi?id=196269
        <rdar://problem/49288612>

        Reviewed by Alexey Proskuryakov.

        Flakiness no longer reproducible.

        * platform/ios-simulator-wk2/TestExpectations:
        * platform/ios-wk2/TestExpectations:

2019-10-28  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] Remove JSPromiseDeferred
        https://bugs.webkit.org/show_bug.cgi?id=203400

        Reviewed by Keith Miller.

        * js/dom/promise-stack-overflow-expected.txt: Added.
        * js/dom/promise-stack-overflow.html: Added.

2019-10-28  Simon Fraser  <simon.fraser@apple.com>

        Update css/css-text-decor WPT
        https://bugs.webkit.org/show_bug.cgi?id=203532

        Reviewed by Tim Horton.

        Mark tests as failing.

        * TestExpectations:

2019-10-28  Wenson Hsieh  <wenson_hsieh@apple.com>
