@@ -193,6 +193,9 @@ fast/events/do-not-drag-and-drop-data-detectors-link.html [ Skip ]
 
 webkit.org/b/202617 imported/w3c/web-platform-tests/picture-in-picture [ Skip ]
 
+# PiP API tests are only relevant on mac and iPad
+media/picture-in-picture-api-element-attributes.html [ Skip ]
+
 # Shared Workers are unsupported
 imported/w3c/web-platform-tests/secure-contexts/basic-shared-worker.html [ Skip ]
 imported/w3c/web-platform-tests/secure-contexts/basic-shared-worker.https.html [ Skip ]
