@@ -1,3 +1,15 @@
+2019-10-29  Peng Liu  <peng.liu6@apple.com>
+
+        [Picture-in-Picture Web API] Synchronize the attributes and properties of HTMLVideoElementPictureInPicture
+        https://bugs.webkit.org/show_bug.cgi?id=203518
+
+        Reviewed by Eric Carlson.
+
+        Test: media/picture-in-picture-api-element-attributes.html
+
+        * Modules/pictureinpicture/HTMLVideoElementPictureInPicture.idl:
+        * html/HTMLAttributeNames.in:
+
 2019-10-29  Dirk Schulze  <krit@webkit.org>
 
         [SVG2] fill-opacity, stroke-opacity, stop-opacity and flood-opacity doe not support percentage
