@@ -1,3 +1,15 @@
+2019-10-29  Peng Liu  <peng.liu6@apple.com>
+
+        [Picture-in-Picture Web API] Synchronize the attributes and properties of HTMLVideoElementPictureInPicture
+        https://bugs.webkit.org/show_bug.cgi?id=203518
+
+        Reviewed by Eric Carlson.
+
+        * TestExpectations:
+        * media/picture-in-picture-api-element-attributes-expected.txt: Added.
+        * media/picture-in-picture-api-element-attributes.html: Added.
+        * platform/mac-wk2/TestExpectations:
+
 2019-10-29  Dirk Schulze  <krit@webkit.org>
 
         [SVG2] fill-opacity, stroke-opacity, stop-opacity and flood-opacity doe not support percentage
